angular/src/app/sass/_layout.scss
* {
	margin: 0px;
	padding: 0px;
	border: none;
}

h2 {
	line-height: 1em;
	font-size: 3em;
}

h2.sectionTitle {
	font-size: 30px;
	margin-bottom: 15px;
}

#tags {
	position: absolute;
	left: 0px;
	top: 0px;
	bottom: 0px;
	right: 80%;
	border-right: 1px #4499FF solid;
}

#things {
	position: absolute;
	right: 0px;
	top: 0px;
	bottom: 0px;
	left: 20%;
}

.scrollContainer {
	overflow-y: auto;
	position: absolute;
	top: 85px;
	bottom: 0px;
	right: 0px;
	left: 0px;
}

.sectionHeader {
	position: relative;
	width: 100%;
	box-sizing: border-box;
	padding: 5px;
	height: 40px;
}

#createNewThingButton{
	display: inline-block;
	position: relative;
	top: -5px;
	left: 23px;
	border-radius: 3px;
	background: linear-gradient(to bottom, rgba(122,188,255,1) 0%,rgba(64,150,238,1) 100%);
	border-color: #4668af;
	color: #FFFFFF;
	text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
	height: 30px;
	padding: 0px 10px;
	font-weight: 500;
}

